plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.12.0'
}

javafx {
    version = '13.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

group 'color-wheel'
version '0.0.1'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

mainClassName = 'app.Main'

run {
    args "ROOT_PATH=$projectDir"
}

jlink {
    options = ['--module-path', '%JAVAFX_SDK_LIB%', '--add-modules', 'javafx.controls']
    launcher {
        name = 'color-wheel'
    }
}

dependencies {
    compile group: 'com.moandjiezana.toml', name: 'toml4j', version: '0.7.2'
}
